# School_21_educational_project_for_IT_specialists_from_SBER

./: README.md
C3_SimpleBashUtils-1/: Makefile  README_RUS.md
C4_s21_math-1/: README_RUS.md
C4_s21_math-1/src/: Makefile  s21_math.h
C6_s21_matrix-3/: README_RUS.md
C6_s21_matrix-3/materials/: s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c
C6_s21_matrix-3/src/: Makefile  s21_main.c  s21_matrix.h
C7_BrickGame_v1.0-1/: README.md
C7_BrickGame_v1.0-1/materials/: auxiliary_fo
C7_BrickGame_v1.0-1/src/: Doxyfile  Makefile  README.md  s21_tetris.c
CPP1_s21_matrixplus-1/: CMakeLists.txt  README.md  README_RUS.md  README_UZB.md
CPP1_s21_matrixplus-1/materials/: anotherImplementation.txt
CPP1_s21_matrixplus-1/src/: Makefile  S21Matrix.h
CPP1_s21_matrixplus-1/src/lib/: S21Matrix.cpp  methodsMatrix.cpp  operatorsMatrix.cpp  support.cpp
CPP1_s21_matrixplus-1/src/tests/: calcComplementsTest.cpp  determinantTest.cpp  eqTest.cpp  inversTest.cpp  mulTest.cpp  subTest.cpp  sumTest.cpp  supportAndExeptionTest.cpp  test.h  transposeTest.cpp
DO2_LinuxNetwork-1/src/: report.md
Data_Science/: README.md
Linux/D01_Linux-1/: README_RUS.md
Linux/DO6_CICD-1/: .gitlab-ci.yml  deploy.sh  telega.sh
s21_decimal/: README.md
s21_decimal/src/: Makefile  all.h  s21_decimal.h
s21_stringplus/: README_RUS.md
s21_stringplus/src/: Makefile  s21_insert.c  s21_main.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_sprintf_convert.c  s21_sprintf_convert.h  s21_sscanf.c  s21_sscanf.h  (+18 more)
sql/: README.md
(+309 files in other folders)
